src/libqtextedit.bf

	[LinkName("QTextEdit_Event")]
	public static extern bool QTextEdit_Event(void* c_this, QEvent e);
	[LinkName("QTextEdit_TimerEvent")]
	public static extern void QTextEdit_TimerEvent(void* c_this, QTimerEvent e);
	[LinkName("QTextEdit_KeyPressEvent")]
	public static extern void QTextEdit_KeyPressEvent(void* c_this, QKeyEvent e);
	[LinkName("QTextEdit_KeyReleaseEvent")]
	public static extern void QTextEdit_KeyReleaseEvent(void* c_this, QKeyEvent e);
	[LinkName("QTextEdit_ResizeEvent")]
	public static extern void QTextEdit_ResizeEvent(void* c_this, QResizeEvent e);
	[LinkName("QTextEdit_PaintEvent")]
	public static extern void QTextEdit_PaintEvent(void* c_this, QPaintEvent e);
	[LinkName("QTextEdit_MousePressEvent")]
	public static extern void QTextEdit_MousePressEvent(void* c_this, QMouseEvent e);
	[LinkName("QTextEdit_MouseMoveEvent")]
	public static extern void QTextEdit_MouseMoveEvent(void* c_this, QMouseEvent e);
	[LinkName("QTextEdit_MouseReleaseEvent")]
	public static extern void QTextEdit_MouseReleaseEvent(void* c_this, QMouseEvent e);
	[LinkName("QTextEdit_MouseDoubleClickEvent")]
	public static extern void QTextEdit_MouseDoubleClickEvent(void* c_this, QMouseEvent e);
	[LinkName("QTextEdit_FocusNextPrevChild")]
	public static extern bool QTextEdit_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QTextEdit_ContextMenuEvent")]
	public static extern void QTextEdit_ContextMenuEvent(void* c_this, QContextMenuEvent e);
	[LinkName("QTextEdit_DragEnterEvent")]
	public static extern void QTextEdit_DragEnterEvent(void* c_this, QDragEnterEvent e);
	[LinkName("QTextEdit_DragLeaveEvent")]
	public static extern void QTextEdit_DragLeaveEvent(void* c_this, QDragLeaveEvent e);
	[LinkName("QTextEdit_DragMoveEvent")]
	public static extern void QTextEdit_DragMoveEvent(void* c_this, QDragMoveEvent e);
	[LinkName("QTextEdit_DropEvent")]
	public static extern void QTextEdit_DropEvent(void* c_this, QDropEvent e);
	[LinkName("QTextEdit_FocusInEvent")]
	public static extern void QTextEdit_FocusInEvent(void* c_this, QFocusEvent e);
	[LinkName("QTextEdit_FocusOutEvent")]
	public static extern void QTextEdit_FocusOutEvent(void* c_this, QFocusEvent e);
	[LinkName("QTextEdit_ShowEvent")]
	public static extern void QTextEdit_ShowEvent(void* c_this, QShowEvent param1);
	[LinkName("QTextEdit_ChangeEvent")]
	public static extern void QTextEdit_ChangeEvent(void* c_this, QEvent e);
	[LinkName("QTextEdit_WheelEvent")]
	public static extern void QTextEdit_WheelEvent(void* c_this, QWheelEvent e);
	[LinkName("QTextEdit_CreateMimeDataFromSelection")]
	public static extern QMimeData QTextEdit_CreateMimeDataFromSelection(void* c_this);
	[LinkName("QTextEdit_CanInsertFromMimeData")]
	public static extern bool QTextEdit_CanInsertFromMimeData(void* c_this, QMimeData source);
	[LinkName("QTextEdit_InsertFromMimeData")]
	public static extern void QTextEdit_InsertFromMimeData(void* c_this, QMimeData source);
	[LinkName("QTextEdit_InputMethodEvent")]
	public static extern void QTextEdit_InputMethodEvent(void* c_this, QInputMethodEvent param1);
	[LinkName("QTextEdit_ScrollContentsBy")]
	public static extern void QTextEdit_ScrollContentsBy(void* c_this, int32 dx, int32 dy);
	[LinkName("QTextEdit_DoSetTextCursor")]
	public static extern void QTextEdit_DoSetTextCursor(void* c_this, QTextCursor cursor);
	[LinkName("QTextEdit_ZoomInF")]
	public static extern void QTextEdit_ZoomInF(void* c_this, float range);
	[LinkName("QTextEdit_Tr2")]
	public static extern char8[] QTextEdit_Tr2(char8[] s, char8[] c);
	[LinkName("QTextEdit_Tr3")]
	public static extern char8[] QTextEdit_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QTextEdit_Find2")]
	public static extern bool QTextEdit_Find2(void* c_this, char8[] exp, int64 options);
	[LinkName("QTextEdit_Find22")]
	public static extern bool QTextEdit_Find22(void* c_this, QRegularExpression exp, int64 options);
	[LinkName("QTextEdit_ToMarkdown1")]
	public static extern char8[] QTextEdit_ToMarkdown1(void* c_this, int64 features);
	[LinkName("QTextEdit_MoveCursor2")]
	public static extern void QTextEdit_MoveCursor2(void* c_this, int64 operation, int64 mode);
	[LinkName("QTextEdit_ZoomIn1")]
	public static extern void QTextEdit_ZoomIn1(void* c_this, int32 range);
	[LinkName("QTextEdit_ZoomOut1")]
	public static extern void QTextEdit_ZoomOut1(void* c_this, int32 range);
}
public struct QTextEdit__ExtraSelection
{
	[LinkName("QTextEdit__ExtraSelection_new")]
	public static extern void* QTextEdit__ExtraSelection_new(QTextEdit__ExtraSelection param1);
	[LinkName("QTextEdit__ExtraSelection_OperatorAssign")]
	public static extern void QTextEdit__ExtraSelection_OperatorAssign(void* c_this, QTextEdit__ExtraSelection param1);
}